# election-sim

./: .env.example  .gitignore  .vercelignore  ANALYTICS.md  ANDROID_RELEASE_GUIDE.md  APPLE_SETUP.md  APP_STORE_LISTING.md  DEPLOY.md  DIFFERENTIATION_PASS.md  ELECTOR_GAME_BRIEF.md  HANDOFF.md  IOS_RELEASE_GUIDE.md  LAUNCH_CHECKLIST.md  LAUNCH_READINESS_NOTES.md  MONETIZATION_SETUP.md  PUSH_NOTIFICATIONS_SETUP.md  README.md  UPDATE_LOG.md  eslint.config.js  index.html  package-lock.json  package.json  test_buy.js  test_puppeteer.js  test_vsbot_smoke.mjs  tsconfig.app.json  vercel.json  vite.config.ts
.github/workflows/: deploy-db.yml  deploy-functions.yml  security.yml
admin/: index.html
marketing/: elector-july-washington-instagram.html
public/: app-ads.txt  delete-account.html  manifest.webmanifest  privacy.html  support.html  terms.html
scripts/: ExportOptions-AppStore.plist  android-dev.sh  android-prepare-gen.sh  android-upload.sh  app-store-screenshots.mjs  build-edge-function.mjs  check-mobile-native.mjs  gen-brand-assets.py  gen-og-image.mjs  generate-apple-client-secret.cjs  ios-disable-script-sandbox.sh  ios-prepare-gen.sh  ios-upload.sh  mobile-screens.mjs  tauri-ios-xcode-build.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.ios.plist  PrivacyInfo.xcprivacy  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/plugins/elector-admob/: Cargo.toml  build.rs
src-tauri/plugins/elector-admob/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
src-tauri/plugins/elector-admob/android/src/main/: AndroidManifest.xml
src-tauri/plugins/elector-admob/android/src/main/java/com/playelector/admob/: ElectorAdmobPlugin.kt
src-tauri/plugins/elector-admob/ios/: Package.resolved  Package.swift
src-tauri/plugins/elector-admob/ios/Sources/: ElectorAdmobPlugin.swift
src-tauri/plugins/elector-admob/permissions/: default.toml
src-tauri/plugins/elector-admob/permissions/autogenerated/: reference.md
src-tauri/plugins/elector-admob/permissions/schemas/: schema.json
src-tauri/plugins/elector-admob/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/plugins/elector-push/: Cargo.toml  build.rs
src-tauri/plugins/elector-push/android/: build.gradle.kts  consumer-rules.pro
src-tauri/plugins/elector-push/android/src/main/: AndroidManifest.xml
src-tauri/plugins/elector-push/android/src/main/java/com/playelector/push/: ElectorPushPlugin.kt
src-tauri/plugins/elector-push/ios/: Package.swift
src-tauri/plugins/elector-push/ios/Sources/: ElectorPushPlugin.swift
src-tauri/plugins/elector-push/permissions/: default.toml
src-tauri/plugins/elector-push/permissions/autogenerated/: reference.md
src-tauri/plugins/elector-push/permissions/schemas/: schema.json
src-tauri/plugins/elector-push/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/plugins/elector-review/: Cargo.toml  build.rs
src-tauri/plugins/elector-review/android/: build.gradle.kts  consumer-rules.pro
src-tauri/plugins/elector-review/android/src/main/: AndroidManifest.xml
src-tauri/plugins/elector-review/android/src/main/java/com/playelector/review/: ElectorReviewPlugin.kt
src-tauri/plugins/elector-review/ios/: Package.swift
src-tauri/plugins/elector-review/ios/Sources/: ElectorReviewPlugin.swift
src-tauri/plugins/elector-review/permissions/: default.toml
src-tauri/plugins/elector-review/permissions/autogenerated/: reference.md
src-tauri/plugins/elector-review/permissions/schemas/: schema.json
src-tauri/plugins/elector-review/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/plugins/elector-siwa/: Cargo.toml  build.rs
src-tauri/plugins/elector-siwa/ios/: Package.swift
src-tauri/plugins/elector-siwa/ios/Sources/: ElectorSiwaPlugin.swift
src-tauri/plugins/elector-siwa/permissions/: default.toml
src-tauri/plugins/elector-siwa/permissions/autogenerated/: reference.md
src-tauri/plugins/elector-siwa/permissions/schemas/: schema.json
src-tauri/plugins/elector-siwa/src/: commands.rs  error.rs  fallback.rs  ios.rs  lib.rs  models.rs
src-tauri/src/: lib.rs  main.rs
src/components/: AccountDeletionSection.tsx  ActiveModifierChip.tsx  AuthGate.tsx  Avatar.tsx  AvatarPicker.tsx  BackButton.tsx  BotSetup.tsx  BrandMark.tsx  CampaignCoach.tsx  CandidateBar.tsx  CandidateSelect.tsx  CandidateStatsModal.tsx  ConfirmDialog.tsx  DailyBonusChest.tsx  DailyChallenge.tsx  ElectionApproachBanner.tsx  ElectionMap.tsx  ElectionTallyView.tsx  ErrorBoundary.tsx  FirstGameplayTips.tsx  FirstWinSocialModal.tsx  GameOver.tsx  GameShell.tsx  HandoffCurtain.tsx  HeaderHud.tsx  HelpButton.tsx  HomePlayerCard.tsx  HowToPlayPanel.tsx  InviteFriend.tsx  Landing.tsx  Leaderboard.tsx  MasteryMeter.tsx  ModifierRoll.tsx  ModifierSheet.tsx  MultiplayerMenu.tsx  MuteButton.tsx  NativeGameHud.tsx  OpeningCampaignMissions.tsx  OrientationGate.tsx  PartyBadge.tsx  (+31 more)
src/game/: achievements.test.ts  achievements.ts  advanceLobbyPhase.test.ts  advanceLobbyPhase.ts  affordability.ts  allocErrors.ts  appConfig.ts  avatars.ts  borders.ts  bot.test.ts  bot.ts  candidateMastery.progress.test.ts  candidateMastery.test.ts  candidateMastery.ts  candidates.ts  colors.ts  config.ts  cosmetics.ts  dailyChallenge.test.ts  dailyChallenge.ts  dailyRankings.test.ts  dailyRankings.ts  dailyStatus.test.ts  endgameHighlights.test.ts  endgameHighlights.ts  engine.test.ts  engine.ts  leaderboard.ts  lobbySecurity.ts  mapTheme.test.ts  mapTheme.ts  mockData.ts  modifiers.test.ts  modifiers.ts  playerColors.ts  profile.ts  promos.test.ts  promos.ts  referral.ts  resolveLobbyTurn.test.ts  (+15 more)
src/hooks/: useAndroidBack.ts  useAnimatedNumber.ts  useBotDriver.ts  useDismissable.ts  useGameRewards.ts  useMultiplayerSync.ts  useProfile.ts  useSessionRestore.ts  (+1 more)
supabase/: ads.sql  app_config.sql  cosmetics.sql  daily.sql  iap.sql  leaderboard.sql  lobbies.sql  moderation.sql  notifications.sql  profiles.sql  referrals.sql  rewards.sql  season.sql  security-hardening-patch.sql
(+60 files in other folders)
