[package]
name        = "election-sim"
version     = "0.0.0"
description = "270 — US Election Simulator"
authors     = []
edition     = "2021"

# lib crate is required for the mobile entry-point macro
[lib]
name       = "election_sim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Sign-in-with-Apple/Google on native open the Supabase authorize URL in the system
# browser (opener) and return via the com.playelector.app:// deep link (deep-link).
# deep-link's build.rs injects the iOS CFBundleURLTypes from tauri.conf.json, so the
# URL scheme survives gen/ regeneration.
tauri-plugin-deep-link = "2"
tauri-plugin-opener    = "2"
tauri-plugin-elector-admob = { path = "plugins/elector-admob" }
# In-app purchases (StoreKit 2 on iOS). Returns the signed-transaction JWS that the
# fulfill-purchase edge function verifies. Requires the iOS 15 deployment target.
tauri-plugin-iap = "0.9"

# ── Intentionally omitted plugins ─────────────────────────────────────────────
# tauri-plugin-shell  — no need to spawn arbitrary OS processes
# tauri-plugin-http   — game has no remote API calls; removing this closes the
#                       fetch() → native HTTP bridge attack surface
# tauri-plugin-fs     — save/load is planned via the store pattern, not raw FS
#
# Add plugins one-by-one as features are needed; keep the surface minimal.

# ── Mobile-only plugins (no desktop build) ────────────────────────────────────
# Haptic feedback. This crate fails to compile on desktop, so it is gated to
# iOS/Android here and in src/lib.rs; its capability is platform-scoped in
# capabilities/mobile.json so desktop codegen never resolves its permissions.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-haptics = "2"
